# ClipVault2

./: .clangd  .coderabbit.yaml  .gitattributes  .gitignore  .prettierrc  AGENTS.md  AGENT_TASK_TEMPLATE.md  AGENT_WORKFLOW.md  CHANGELOG.md  CLAUDE.md  CLEANUP.md  CMakeLists.txt  CMakePresets.json  COMMANDS.md  CONTRIBUTING.md  CONVENTIONS.md  LICENSE  PACKAGE.md  PLAN.md  PROGRESS.md  README.md  TESTING.md  THUMBNAIL_INVESTIGATION.md  TROUBLESHOOTING.md  build.ps1  eslint.config.js  package-lock.json  package.json  setup-obs.ps1  tsconfig.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
config/: games_database.json  settings.json
docs/: ARCHITECTURE.md  BUILD.md  FILE_PATHS.md  FUTURE_FIXES.md  IMPLEMENTATION.md  LIBOBS.md  PACKAGING.md  RELEASES.md  TESTING.md  TROUBLESHOOTING.md  UI.md
scripts/: postinstall.cmd  quick-check.ps1  run-build.cmd  run-test.ps1  test-clipvault.ps1  validate-clip.ps1  verify-env.ps1  verify-ui.ps1
src/: audio_devices.cpp  audio_devices.h  capture.cpp  capture.h  config.cpp  config.h  encoder.cpp  encoder.h  game_detector.cpp  game_detector.h  hotkey.cpp  hotkey.h  logger.cpp  logger.h  main.cpp  obs_core.cpp  obs_core.h  replay.cpp  replay.h  tray.cpp  tray.h
ui/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/constants/: version.ts
ui/src/main/: cleanup.ts  exportPreviewPreload.ts  exportPreviewTemplate.ts  main.ts  tsconfig.json
ui/src/preload/: index.ts  tsconfig.json
ui/src/renderer/: App.tsx
ui/src/renderer/components/: GameTagEditor.tsx
ui/src/renderer/components/Editor/: Editor.tsx
ui/src/renderer/components/FirstRunWizard/: FirstRunWizard.tsx  index.ts
ui/src/renderer/components/Layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
ui/src/renderer/components/Settings/: Settings.tsx
ui/src/renderer/constants/: version.ts
ui/src/renderer/hooks/: useIntersectionObserver.ts  useLibraryState.ts  useThumbnails.ts  useVideoMetadata.ts  useVirtualization.ts
ui/src/renderer/stores/: gameTagEditorStore.ts
ui/src/renderer/styles/: globals.css
ui/src/renderer/types/: electron.d.ts
ui/src/shared/: types.ts
